syntax = "proto3";

package csw_protobuf;

import "scalapb/scalapb.proto";
import "csw_protobuf/units.proto";
import "csw_protobuf/keytype.proto";
import "google/protobuf/timestamp.proto";

option (scalapb.options) = {
    import: "csw.event.client.pb.TypeMapperSupport._"
    single_file: true
};

message PbParameter {
    string name                             = 1;
    PbUnits units                           = 2;
    PbKeyType keyType                       = 3;
    repeated PbParamValue values            = 4;
}

message PbParamValue {
    oneof sealed_value {
        PbInt int = 1;
        PbLong long = 2;
        PbShort short = 3;
        PbDouble double = 4;
        PbFloat float = 5;
        PbBoolean bool = 6;
        PbChar char = 7;
        PbString string = 8;
        PbChoice choice = 9;
        PbRaDec radec = 10;
        PbUTCTime utcTime = 11;
        PbTAITime taiTime = 12;
        PbBytes bytes = 13;
        PbArray array = 14;
        PbMatrix matrix = 15;
        PbStruct struct = 16;
    }
}


message PbInt {
    int32 value = 1;
}

message PbLong {
    int64 value = 1;
}

message PbShort {
    int32 value = 1;
}

message PbDouble {
    double value = 1;
}

message PbFloat {
    float value = 1;
}

message PbBoolean {
    bool value = 1;
}

message PbChar {
    int32 value = 1;
}

message PbString {
    string value = 1;
}

message PbChoice {
    string value = 1;
}

message PbRaDec {
    double ra = 1;
    double dec = 2;
}

message PbUTCTime {
    google.protobuf.Timestamp value = 1;
}

message PbTAITime {
    google.protobuf.Timestamp value = 1;
}

message PbBytes {
    bytes value = 1;
}

message PbArray {
    repeated PbParamValue values = 1;
}

message PbMatrix {
    repeated PbArray values = 1;
}

message PbStruct {
    repeated PbParameter paramSet = 1;
}
